More blood tweaks (#6811)

--- a/Resources/Prototypes/Reagents/biological.yml
+++ b/Resources/Prototypes/Reagents/biological.yml
@@ -3,7 +3,7 @@
   name: blood
   group: Biological
   desc: I hope this is ketchup.
-  color: "#9e1010"
+  color: "#800000"
   physicalDesc: ferrous
   metabolisms:
     Drink:
